--- a/project.config.json
+++ b/project.config.json
@@ -47,7 +47,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wxb35321edd30d9cc2",
+  "appid": "wx11ca4869e1818b99",
   "projectname": "suggestion-mini",
   "simulatorType": "wechat",
   "simulatorPluginLibVersion": {},
